@@ -22,17 +22,32 @@
 # inside the app bundle. Not necessary if you require the user to install
 # them on his side, or if you use the ones that come with the system on Leopard
 
-PLUG_IN_PATH="./output/wxFormBuilder.app/Contents/PlugIns"
+pushd `dirname $0` > /dev/null
+cd ../../
+PROJECT_ROOT=`pwd`
+popd > /dev/null
 
-FILES="-x ./output/wxFormBuilder.app/Contents/MacOS/wxformbuilder \
+PLUG_IN_PATH="$PROJECT_ROOT/output/wxFormBuilder.app/Contents/PlugIns"
+
+FILES="-x $PROJECT_ROOT/output/wxFormBuilder.app/Contents/MacOS/wxformbuilder \
 -x $PLUG_IN_PATH/libadditional.dylib \
 -x $PLUG_IN_PATH/libcommon.dylib \
 -x $PLUG_IN_PATH/libcontainers.dylib \
--x $PLUG_IN_PATH/liblayout.dylib \
--x $PLUG_IN_PATH/libwx_macu_flatnotebook-2.8_wxfb.dylib \
--x $PLUG_IN_PATH/libwx_macu_propgrid-2.8_wxfb.dylib \
--x $PLUG_IN_PATH/libwx_macu_scintilla-2.8_wxfb.dylib \
--x $PLUG_IN_PATH/libwxadditions-mini.dylib"
+-x $PLUG_IN_PATH/liblayout.dylib"
 
+# these are 'old' contributions that were merged into the main 
+# wxWidgets repo after 2.9
+if [ -f "$PLUG_IN_PATH/libwx_macu_flatnotebook-2.8_wxfb.dylib" ]; then
+	FILES = "$FILES -x $PLUG_IN_PATH/libwx_macu_flatnotebook-2.8_wxfb.dylib "
+fi
+if [ -f "$PLUG_IN_PATH/libwx_macu_propgrid-2.8_wxfb.dylib" ]; then
+	FILES = "$FILES -x $PLUG_IN_PATH/libwx_macu_propgrid-2.8_wxfb.dylib "
+fi
+if [ -f "$PLUG_IN_PATH/libwx_macu_scintilla-2.8_wxfb.dylib" ]; then
+	FILES = "$FILES -x $PLUG_IN_PATH/libwx_macu_scintilla-2.8_wxfb.dylib "
+fi
+if [ -f "$PLUG_IN_PATH/libwxadditions-mini.dylib" ]; then
+	FILES = "$FILES -x $PLUG_IN_PATH/libwxadditions-mini.dylib "
+fi
 
-dylibbundler -od -b -d ./output/wxFormBuilder.app/Contents/libs/ $FILES
+dylibbundler -od -b -d $PROJECT_ROOT/output/wxFormBuilder.app/Contents/libs/ $FILES
