@@ -889,6 +889,7 @@ MACRO(wxAUI_NB_WINDOWLIST_BUTTON)
 MACRO(wxAUI_NB_CLOSE_BUTTON)
 MACRO(wxAUI_NB_CLOSE_ON_ACTIVE_TAB)
 MACRO(wxAUI_NB_CLOSE_ON_ALL_TABS)
+MACRO(wxAUI_NB_MIDDLE_CLICK_CLOSE)
 MACRO(wxAUI_NB_TOP)
 MACRO(wxAUI_NB_BOTTOM)
 
